--- a/fashion.css
+++ b/fashion.css
@@ -12,47 +12,36 @@ h5 {
   color: black;
   font-family: var(--default-font-family);
 }
-header {
-  display: block;
+
+.content {
   text-align: center;
-  margin-top: 100px;
+  padding: 30px;
+}
+
+img {
+  width: 600px;
+  display: block;
+  margin: 0 auto;
+}
+header {
+  background-image: url(../Website-Portfolio/IMAGES/PY\ 1.png);
+  background-repeat: no-repeat;
+  padding: 100px 50px 0;
+  margin: 0;
 }
 
 h1 {
   font-size: 100px;
   font-weight: bold;
-}
-
-.container {
   text-align: center;
 }
 
-.learn-more {
-  background: var(--primary-brand-colour);
-  color: white;
-  text-decoration: none;
-  padding: 10px 15px;
-  border-radius: 4px;
-  font-size: 18px;
-  transition: all 100ms ease-in-out;
+p {
+  display: block;
+  margin: auto;
+  margin-bottom: 50px;
+  width: 1000px;
 }
-
-.learn-more:hover {
-  background: white;
-  color: var(--primary-brand-colour);
-  text-decoration: none;
-  padding: 10px 15px;
-  border: 1px solid var(--primary-brand-colour);
-  border-radius: 2px;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.main-image {
-  width: 100%;
-  height: auto;
-}
-
 footer {
   text-align: center;
   margin: 40px 0;
@@ -79,8 +68,12 @@ footer .social-links a:hover {
 .navbar-toggler {
   background-color: white;
 }
+
 @media (max-width: 960px) {
   h1 {
     font-size: 66px;
+  }
+  p {
+    width: 600px;
   }
 }
