--- a/index.css
+++ b/index.css
@@ -53,6 +53,14 @@ h1 {
   height: auto;
 }
 
+.content {
+  text-align: center;
+  padding: 100px;
+}
+
+.content h3 {
+  margin-top: 50px;
+}
 footer {
   text-align: center;
   margin: 40px 0;
