--- a/index.css
+++ b/index.css
@@ -16,13 +16,9 @@ h5 {
   color: black;
   font-family: var(--default-font-family);
 }
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
-}
+
 header {
   background-image: url(IMAGES/PY\ 5.jpg);
-  max-width: 1400px;
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
@@ -46,15 +42,32 @@ h1 {
   font-weight: bold;
 }
 
+p {
+  font-size: 24px;
+}
+main {
+  background-image: url(IMAGES/PY\ 6.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  max-height: 1000px;
+  padding: 400px;
+}
+
 .main-content {
   text-align: center;
   display: block;
   text-align: center;
 }
 
-.learn-more {
-  background: var(--primary-brand-colour);
+.main-content p {
   color: white;
+  text-align: left;
+  margin-right: 50px;
+}
+.learn-more {
+  background: white;
+  color: #113b39;
   text-decoration: none;
   padding: 10px 15px;
   border-radius: 4px;
@@ -63,19 +76,35 @@ h1 {
 }
 
 .learn-more:hover {
-  background: white;
-  color: var(--primary-brand-colour);
+  background: #113b39;
+  color: white;
   text-decoration: none;
   padding: 10px 15px;
   border: 1px solid var(--primary-brand-colour);
-  border-radius: 2px;
+  border-radius: 4px;
   font-size: 18px;
   cursor: pointer;
 }
 
-.main-image {
-  width: 100%;
-  height: auto;
+.contact-button {
+  background: #c46354;
+  color: white;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 4px;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+
+.contact-button:hover {
+  background: white;
+  color: #c46354;
+  text-decoration: none;
+  padding: 10px 15px;
+  border: 1px solid white;
+  border-radius: 4px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .content {
